--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-code-extra": "^1.0.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
