--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/remark-hint": "^1.0.1",
     "autoprefixer": "10.4.14",
     "next": "13.3.0",
     "next-mdx-remote": "^4.4.1",
@@ -27,6 +28,9 @@
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "remark-code-extra": "^1.0.1",
+    "remark-hint": "^1.0.10",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
